Bug 403886 - No way to set/change investment start date in investment wizard
Summary: No way to set/change investment start date in investment wizard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-03 10:17 UTC by Ian Neal
Modified: 2019-02-03 15:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2019-02-03 10:17:41 UTC
SUMMARY
When you add a new investment to an investment account there is no way of setting / changing the start date of that investment, it gets created with today's date. You have to wait until you buy some of that investment and run the consistency check to correct the issue.

STEPS TO REPRODUCE
1. Create an investment account and add an investment
2. Buy some that investment with a date before today's date
3. Run the consistency check or try to make any changes in the brokerage account

OBSERVED RESULT
Consistency check flags that the investment date is before the start date and corrects it.
You are unable to edit the investment in the brokerage account until the consistency check is carried out.

EXPECTED RESULT
The investment wizard lets you set the start date of the investment when creating / editing the investment (though would default to today's date).


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: Fedora 29 (xcb windowing system)
(available in About System)
KDE Plasma Version: 5.13.5-1
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
Workaround is to go into the investment account, change the date of the earliest transaction on the investment and run the consistency check.
Comment 1 Thomas Baumgart 2019-02-03 15:49:31 UTC
Git commit 60e2d8cfd3a774b360ce8aadbd993c50fed404ef by Thomas Baumgart.
Committed on 03/02/2019 at 15:46.
Pushed by tbaumgart into branch '5.0'.

Do not allow to enter transactions prior to account opening date

The transaction editor in the standard account ledger does not allow to
enter transactions that reference accounts that have an opening date
later than the transaction date.

The investment transaction editor is missing this feature and one could
enter transactions with a date prior to the opening date of the
investment or asset account referenced in the transaction.

Moreover, the opening date of an invest account cannot be changed by the
user but got updated to a matching value when the consistency check was
run (e.g. as part of file save). The user was informed and was
surprised.

This change adds an automatic update of the opening date for the invest
account if needed when the transaction is entered. Also, it does not
allow to enter the transaction, colorizes the date and presents a
tooltip on the date widget just like for the standard transaction
editor.
FIXED-IN: 5.0.4

M  +32   -1    kmymoney/dialogs/investtransactioneditor.cpp
M  +12   -0    kmymoney/dialogs/transactioneditor.cpp

https://commits.kde.org/kmymoney/60e2d8cfd3a774b360ce8aadbd993c50fed404ef